@@ -1,6 +1,5 @@
 package com.kalix.ide.preferences;
 
-import java.util.Arrays;
 import java.util.List;
 
 /**
@@ -113,7 +112,7 @@ public class PreferenceKeys {
     // ==== DEFAULT VALUES ====
 
     /** Default recent files list */
-    public static final List<String> DEFAULT_RECENT_FILES = Arrays.asList();
+    public static final List<String> DEFAULT_RECENT_FILES = List.of();
 
     /** Maximum number of recent files to track - unified with AppConstants.Files.MAX_RECENT_FILES */
     public static final int MAX_RECENT_FILES = 10;
